--- a/ProyectoSistemaBiblioteca/src/Interfaz_Grafica/CambiarContraseña.form
+++ b/ProyectoSistemaBiblioteca/src/Interfaz_Grafica/CambiarContraseña.form
@@ -179,9 +179,9 @@
                   <Font name="Tahoma" size="14" style="0"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/imagenes/img_Cancel.png"/>
+                  <Image iconType="3" name="/imagenes/salir_opt.png"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Cancelar"/>
+                <Property name="text" type="java.lang.String" value="Salir"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCancelarActionPerformed"/>
