Hize Gestion Carrera

--- a/ProyectoSistemaBiblioteca/src/Interfaz_Grafica/GestionUsuarios.form
+++ b/ProyectoSistemaBiblioteca/src/Interfaz_Grafica/GestionUsuarios.form
@@ -278,6 +278,7 @@
                   </Properties>
                   <Events>
                     <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="Tabla_UsuariosMouseClicked"/>
+                    <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="Tabla_UsuariosKeyTyped"/>
                   </Events>
                 </Component>
               </SubComponents>
