Termine la gestion carrera para que se vea en el combobox de ña ventana usuario y que al seleccionar un item de la tabla, se ponga la carrera correcta

--- a/ProyectoSistemaBiblioteca/src/Interfaz_Grafica/VentanaPrincipal.form
+++ b/ProyectoSistemaBiblioteca/src/Interfaz_Grafica/VentanaPrincipal.form
@@ -99,6 +99,14 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuGestionarUsuariosActionPerformed"/>
               </Events>
             </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItemCarreras">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Gestionar Carreras"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemCarrerasActionPerformed"/>
+              </Events>
+            </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuCambiarContrase&#xf1;a">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Cambiar Contrase&#xf1;a"/>
